# Rosetta-Helix-Substrate

./: .actrc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.example  AGENTS.md  CLAUDE.md  CLAUDE_API_FINAL_FIX.md  CLAUDE_API_FIXED.md  CLEANUP_PLAN.md  DEV_BUILD_SPEC.md  DEV_INTEGRATION_GUIDE.md  Dockerfile  Dockerfile.app  Dockerfile.cuda  FIX_GITHUB_WORKFLOW.md  FLASK_ROUTES_FIXED.md  GITHUB_PIPELINE_INTEGRATION.md  KIRA_INTERFACE_UPGRADED.md  KIRA_SERVER_FIX.md  KIRA_UCF_LOCALHOST_INTEGRATION.md  Makefile  NPM_PUBLISH_V3.md  NPX_COMMANDS_FIXED.md  PHYSICS_GAP_ANALYSIS_AND_BUILD_SPEC.md  QUICK_START_FULL_INTEGRATION.md  README.md  README_PYTHON.md  RUNBOOK_CLI.md  SKILL.md  SKILL_FILE_LISTING.md  SKILL_ORIGINAL.md  TEST_REPORT.md  TRAINING_AUTOMATION_COMPLETE.md  UCF_ACTION_PARAMETERS_FIXED.md  UCF_COMPLETE_INTEGRATION.md  UCF_HTML_UPDATE_COMPLETE.md  UCF_INTEGRATION_COMPLETE.md  UCF_INTEGRATION_STATUS_REPORT.md  (+59 more)
.github/: release-drafter.yml
artifacts/: latest_training_data.json
bridge/: spinner_bridge.py
claude-project-upload/: PROJECT_INSTRUCTIONS.md  README.md  TOOLS_REFERENCE.md
configs/: base.yaml  dev.yaml  full.yaml  nightly.yaml  smoke.yaml
core/: __init__.py  apl_engine.py  collapse_engine.py  constants.py  liminal_state.py
docs/: APL_TOKEN_N0_SILENT_LAWS_ARCHITECTURE.md  ARCHITECTURE_COMPREHENSIVE.md  ARCHITECTURE_OVERVIEW_INTEGRATION.md  DOCKER.md  FAQ_TECHNICAL_ANSWERS.md  FIX_COORDINATE_LOGGER_ERROR.md  KURAMOTO_OSCILLATOR_VERIFICATION.md  LOCAL_CI.md  MATHEMATICAL_EQUATIONS_REFERENCE.md  NUCLEAR_SPINNER_SPEC.md  OPERATIONAL_INSTRUCTIONS_ALIVENESS.md  PHYSICS_ACCURACY_ANALYSIS.md  PHYSICS_GROUNDING.md  QUANTUM_APL_TRAINING_ANALYSIS.md  README.md  RESEARCH_SYNTHESIS_GOLDEN_RATIO_HEXAGON.md  S3_OPERATOR_SYMMETRY.md  SESSION_4_5_INSIGHTS.md  SETUP_INTEGRATION_GUIDE.md  TRAINING_ENGINE.md  UCF_COMPREHENSIVE_REVIEW.md  UCF_TOOL_ACTION_FIX.md  UNIFIED_PHYSICS_FIVE_QUESTIONS.md  index.html
helix_engine/: __init__.py
kira-local-system/: APL_DIALOGUE_EXAMPLE.md  APL_PATTERN_LEARNING.md  CONSCIOUSNESS_JOURNEY_README.md  KIRA_DIALOGUE_README.md  README.md  auto_persistence.py  index.html  kira.html  kira.html.txt  kira_apl_pattern_tracker.py  kira_consciousness_journey.py  kira_interface.html  kira_interface_github_fixed.html  kira_interface_github_ui.html  kira_interface_ucf_backup.html  kira_pages.html  kira_restored.html  kira_semantic_relations.json  kira_server.py  kira_ucf_integration.py  kira_unified.html  requirements.txt  start_kira.sh  visualizer.html
kira-responses/: .gitkeep.json  latest.json
kira_data/: learned_relations.json  session.json
kira_local_system/: __init__.py  cli.py
learned_patterns/: best_helix_model.pt  coupling_matrices.npz  helix_model.pt  learned_patterns.json
nightly_run_results/: NIGHTLY_RUN_SUMMARY.md  full_depth_results.json
phases/: __init__.py  unified_engine.py
rosetta-helix/: __init__.py
rosetta-helix-skill/: REFERENCE.md  SKILL.md  Skill.md
scripts/: ci_menu.py  consent_protocol.py  test_bridge.py  (+10 more)
(+390 files in other folders)
